# KMRD

./: .gitignore  build_dataset_cache.py  pyproject.toml  real_train.sh  setup.sh  train.py
RDM/: __init__.py  beta_schedule.py  distribution.py  losses.py  manifold.py  sde_lib.py  solver.py  training.py
data/: download_cath.sh
diffgeo/: __init__.py  angles_and_coords.py  kinetic_metric.py  manifold.py
evaluation/: basic_evaluation.py  metrics.py
foldingdiff/: bert_for_diffusion.py  dataset.py
score_based/: __init__.py  diffusion_math.py  losses.py  sampling.py  training.py
tests/: test_attention_masking.py  test_bridge_extrinsic_geometry.py  test_dataset.py  test_diffusion_math.py  test_evaluation_contract.py  test_losses.py  test_manifolds.py  test_masking.py  test_metric_regressions.py  test_metrics_decode.py  test_model_and_training.py  test_numerical_stability.py  test_pdb_roundtrip.py
utils/: __init__.py  checkpoint.py  config.py  data_iter.py  diffusion_math.py  lr_schedule.py  sampling.py  train.py  wandb.py
